--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -1,23 +1,32 @@
-user  nginx;
-worker_processes  auto;
-pid        /var/run/nginx.pid;
-
+worker_processes auto;
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
+    include       mime.types;
     default_type  application/octet-stream;
 
-    access_log  /var/log/nginx/access.log;
-    error_log   /var/log/nginx/error.log;
+    server {
+        listen 80;
 
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
+        server_name localhost;
 
-    include /etc/nginx/conf.d/*.conf;  # Ensure this includes all your server configs
+        location / {
+            proxy_pass http://nodejs-app:3000;  # Forward requests to the Node.js container
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        error_page 404 /404.html;
+        location = /40x.html {
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+        }
+    }
 }
