--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -1,4 +1,6 @@
 worker_processes auto;
+load_module modules/ngx_http_modsecurity_module.so;
+
 events {
     worker_connections 1024;
 }
@@ -11,6 +13,9 @@ http {
         listen 80;
 
         server_name localhost;
+
+        modsecurity on;
+        # modsecurity_rules_file modsec_includes.conf;
 
         location / {
             proxy_pass http://nodejs-app:3000;  # Forward requests to the Node.js container
