--- a/src/docker-compose.yaml
+++ b/src/docker-compose.yaml
@@ -10,20 +10,32 @@ services:
       - "3000"
     networks:
       - backend
-
-  nginx:
-    build:
-      context: ./nginx  # Docker build context for Nginx with ModSecurity
-      dockerfile: Dockerfile  # Dockerfile for building Nginx with ModSecurity
-    container_name: nginx-proxy
+  
+  crs-nginx:
+    container_name: modsec2-nginx
+    image: owasp/modsecurity-crs:nginx
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro  # Mount the custom Nginx config
+      - ./nginx/custom.conf:/etc/nginx/conf.d/custom.conf:ro
     depends_on:
       - nodejs
     networks:
       - backend
+
+  # nginx:
+  #   build:
+  #     context: ./nginx  # Docker build context for Nginx with ModSecurity
+  #     dockerfile: Dockerfile  # Dockerfile for building Nginx with ModSecurity
+  #   container_name: nginx-proxy
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro  # Mount the custom Nginx config
+  #   depends_on:
+  #     - nodejs
+  #   networks:
+  #     - backend
 
 networks:
   backend:
